# muonlinewithandroid

./: .gitignore  README.md
MainInfo/: MainConnect.ini  MainInfo.ini  MainInfo1.ini
MainInfo/ItemManager/: CustomItemToolTip.txt  CustomTextTooltip.txt
MainInfo/Local/: CEffectRenderMesh.txt  CustomBuyVip.txt  CustomCape.txt  CustomCommand.txt  CustomEffectDynamic.txt  CustomEffectStatic.txt  CustomImage.txt  CustomItem.txt  CustomItemRenderMesh.txt  CustomJewel.txt  CustomMonster.txt  CustomMonsterRenderMesh.txt  CustomNameWave.txt  CustomNpcName.txt  CustomPet.txt  CustomPetEffectDynamic.txt  CustomPetEffectStatic.txt  CustomRenderEffect.txt  CustomSmokeItem.txt  CustomStack.txt  CustomWing.txt  CustomWorld.txt
MuServer/1.- ConnectServer/Data/: ConnectServer.ini
MuServer/1.- ConnectServer/LOG/: 2025-04-03.txt  2025-04-04.txt  2025-04-06.txt  2025-04-07.txt  2025-04-08.txt  2025-04-10.txt  2025-04-19.txt  2025-04-21.txt  2025-10-04.txt  2025-10-05.txt  2025-10-08.txt  2025-10-14.txt  2025-10-15.txt  2025-10-16.txt  2025-12-22.txt  2026-05-23.txt  2026-05-24.txt  2026-05-25.txt  2026-05-28.txt  2026-05-31.txt
MuServer/2.- DataServer/Data/: DataServer.ini
MuServer/2.- DataServer/LOG/: 2025-04-03.txt  2025-04-04.txt  2025-04-06.txt  2025-04-07.txt  2025-04-14.txt  2025-04-19.txt  2025-10-04.txt  2025-10-05.txt  2025-10-08.txt  2025-10-14.txt  2025-10-15.txt  2025-10-16.txt  2025-12-22.txt  2026-05-23.txt  2026-05-24.txt  2026-05-28.txt  2026-05-31.txt
MuServer/3.- JoinServer/Data/: JoinServer.ini
MuServer/DB/: MuOnlineBase.bak  MuOnlineBase.reg  SQL Server 2008 R2.sql  SQL Server 2012.sql  SQL Server 2017.sql  SQL Server 2019.sql  SQL Server 2022.sql
MuServer/Data/: Command.txt  EventItemBagManager - copia.txt  EventItemBagManager.txt  MapManager.txt  Message_backup.txt  Message_chs.txt  Message_por.txt  ShopManager.txt
MuServer/Data/BMD/: Gate.bmd  item_model.txt
MuServer/Data/CashShop/: CashShopPackage.txt  CashShopProduct.txt
MuServer/Data/Character/: DefaultClassInfo.txt
MuServer/Data/Custom/: CustomArena.txt  CustomBuyVip.txt  CustomBuyVip_.xml  CustomEventDrop.txt  CustomJewel.txt  CustomOnlineLottery.txt  CustomQuiz.txt  CustomRankUser.txt  CustomRanking.txt  CustomStartItem.txt  (+4 more)
MuServer/SQL/: Update16 - Add Colum Power.sql  Update16 - InventoryExpansion.sql  Update16 - WZ_CustomRanking.sql  Update22 - Add HolyInventory Column.sql  Update22 - Fixed view Frient List.sql  Update22 - WZ_CreateCharacter.sql
MuServer/Tools/: Fomat txt file.html
SRCMainGS/Source/: CLAUDE.md  version.properties
SRCMainGS/Source/Main5.2/dependencies/source/cryptopp-CRYPTOPP_8_2_0/: CMakeLists.txt  algebra.cpp  cpu-features.h  dll.cpp
SRCMainGS/Source/Main5.2/dependencies/source/turbojpeg-android/: CMakeLists.txt  jconfig.h.in  jconfigint.h.in  jversion.h
SRCMainGS/Source/android/app/: CMakeLists.txt  M5_DevLog.md  M6_DevLog.md  build.gradle.kts
SRCMainGS/Source/android/app/src/main/: AndroidManifest.xml
SRCMainGS/Source/android/app/src/main/assets/Data/Local/: Connect.msil  Slide.txt  sockeitem.txt
SRCMainGS/Source/android/app/src/main/assets/Data/Local/Local/: CAnimationItem.bmd  CEffect.bmd  CEffectRenderMesh.bmd  CMapEffect.bmd  CMapRenderMesh.bmd  CPetEffect.bmd  CPetRenderMesh.bmd  CSetEffect.bmd  Credit.bmd  EffectTRSData.bmd  GameGuard.bmd  Item.bmd  ItemLevelTooltip.bmd  ItemTooltip.bmd  JewelOfHarmonyOption.bmd  JewelOfHarmonyOption.txt  JewelOfHarmonySmelt.bmd  Launcher.bmd  MakeWorldTRSData.bmd  Mix.bmd  ServerList.bmd  TooltipTRSData.bmd  movereq.bmd  slide.bmd
SRCMainGS/Source/android/app/src/main/assets/Data/Local/Local/Eng/: BuffEffect_eng.bmd  Dialog_eng.bmd  ItemAddOption_eng.bmd  ItemLevelTooltip_eng.bmd  ItemSetType_eng.bmd  ItemTooltipText_eng.bmd  ItemTooltip_eng.bmd  Item_eng.txt  MasterSkillTooltip_eng.bmd  MasterSkillTreeData_eng.bmd  Mix_eng.bmd  Npcname(eng).txt  QuestWords_eng.bmd  Quest_eng.bmd  Skill_eng.bmd  Skill_eng.txt  SocketItem_eng.bmd  Text_eng.bmd  Text_eng.txt  itemsetoption_eng.bmd  itemsettype.bmd  movereq_eng.bmd
SRCMainGS/Source/android/app/src/main/assets/Data/Local/Local/Eng/ImgsMapName/: BalgasBarrack.OZT  BalgasRefuge.OZT  CustomMap10.ozt  CustomMap15.ozt  CustomMap17.ozt  CustomMap21.ozt  CustomMap3.ozt  CustomMap4.ozt  CustomMap5.ozt  CustomMap7.ozt  CustomMap8.ozt  CustomMap9.ozt  Doppelganger.OZT  Elbeland.OZT  EmpireGuardian.OZT  Icarus.OZT  IllusionTemple.OZT  Kalima.OZT  MapNameAddStrife.OZT  MapName_Karutan.OZT  MapName_MarketRolen.OZT  NewMap84.ozt  NewMap85.ozt  NewMap86.ozt  NewMap87.OZT  NewMap88.ozt  NewMap89.ozt  NewMap90.ozt  NewMap91.ozt  NewMap95.ozt  SwampOfCalmness.OZT  aida.OZT  atlans.OZT  bloodcastle.OZT  chaoscastle.OZT  crywolffortress.OZT  devias.OZT  devilsquare.OZT  duelarena.OZT  dungeun.OZT  (+13 more)
SRCMainGS/Source/android/app/src/main/assets/Data/Local/Local/Eng/Minimap/: Minimap_World1_eng.bmd  Minimap_World3_eng.bmd  Minimap_World4_eng.bmd  Minimap_World52_eng.bmd
SRCMainGS/Source/android/app/src/main/java/com/mu/client/: MuActivity.kt  MuJNI.kt  MuSurfaceView.kt
SRCMainGS/Source/android/app/src/main/jni/: CGMProtectStub.cpp  DSPlaySound.h  ErrorReportStub.cpp  JpegStubs.cpp  MuAssetExtractor.cpp  MuAssetExtractor.h  MuAudio.cpp  MuAudio.h  MuBridge.cpp  MuConfig.cpp  MuConfig.h  MuFile.cpp  MuFile.h  MuFreeTypeRender.cpp  MuFreeTypeRender.h  MuGLCompat.h  MuGLContext.cpp  MuGLContext.h  MuGameInit.cpp  MuGameLoop.cpp  MuGameLoop.h  MuGlobalState.cpp  MuInput.cpp  MuInput.h  MuNetwork.cpp  MuNetwork.h  MuPlatform.h  MuRendererTypes.h  MuStringTable.cpp  MuStringTable.h  MuWave1Test.cpp  MuWave2Test.cpp  MuWave3Test.cpp  MuWave4Test.cpp  MuWave5Test.cpp  NewUIStubs.cpp  ProtocolDispatch.cpp  ProtocolDispatch.h  RenderBatcher.cpp  RenderBatcher.h  (+42 more)
SRCMainGS/Source/android/app/src/main/jni/ExternalObject/leaf/: stdleaf.h
SRCMainGS/Source/android/app/src/main/jni/gl/: gl.h  glew.h  glu.h
SRCMainGS/Source/android/app/src/main/jni/shaders/: shader_es.frag  shader_es.vert
SRCMainGS/Source/android/app/src/main/res/values/: strings.xml  styles.xml
SRCMainGS/Util/: win32.api
(+1331 files in other folders)
